# bu_project

./: CMakeLists.txt  README.md  package.xml
launch/: apriltags.launch
msg/: filteredaverage.msg  tagdata.msg  tagdata3d.msg
resources/: ost.yaml
src/: .noise_variance_sampling.cpp.swp  .tag_calculations.cpp.swp  filter_test.cpp  filtered_average.cpp  frankenstein.cpp  gyro_noise_test.cpp  my_publisher.cpp  my_subscriber.cpp  noise_variance_sampling.cpp  robot_pose.cpp  rotation_noise_test.cpp  tag_calculations.cpp  vision_rotation.cpp
